--- a/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
+++ b/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
@@ -1,12 +1,6 @@
 <mat-card>
-  <mat-card-title
-    class="mat-card-title"
-    *ngIf="!isTransactionBlockShown"
-  >
-    <button
-      mat-icon-button
-      (click)="isTransactionBlockShown = !isTransactionBlockShown"
-    >
+  <mat-card-title class="mat-card-title" *ngIf="!isTransactionBlockShown">
+    <button mat-icon-button (click)="isTransactionBlockShown = !isTransactionBlockShown">
       <mat-icon>add</mat-icon>
     </button>
     <span>
@@ -22,7 +16,10 @@
         (ngSubmit)="onSubmit()"
         class="add-transaction__form form"
       >
-        <mat-radio-group class="form__control form__control_radio" formControlName="transactionType">
+        <mat-radio-group
+          class="form__control form__control_radio"
+          formControlName="transactionType"
+        >
           <mat-radio-button class="form__radio" value="expenses">
             Расходы
           </mat-radio-button>
@@ -34,16 +31,13 @@
           </mat-radio-button>
         </mat-radio-group>
 
-        <div *ngIf="transactionTypeControl.value !== 'transfer'">
+        <div class="form__row" *ngIf="transactionTypeControl.value !== 'transfer'">
           <mat-form-field class="form__control">
             <mat-label>
               <span>Счет</span>
             </mat-label>
             <mat-select #account (selectionChange)="onAccountChange($event)">
-              <mat-option
-                *ngFor="let account of accounts"
-                [value]="account"
-              >
+              <mat-option *ngFor="let account of accounts" [value]="account">
                 {{ account.name }}
               </mat-option>
             </mat-select>
@@ -58,8 +52,18 @@
                 {{ currencies[account?.value.currencyId].name }}
               </span>
             </mat-label>
-            <input *ngIf="transactionTypeControl.value === 'incomes'" matInput type="number" formControlName="income">
-            <input *ngIf="transactionTypeControl.value === 'expenses'" matInput type="number" formControlName="outcome">
+            <input
+              *ngIf="transactionTypeControl.value === 'incomes'"
+              matInput
+              type="number"
+              formControlName="income"
+            />
+            <input
+              *ngIf="transactionTypeControl.value === 'expenses'"
+              matInput
+              type="number"
+              formControlName="outcome"
+            />
           </mat-form-field>
 
           <mat-form-field class="form__control" *ngIf="categories">
@@ -68,6 +72,7 @@
               <mat-option
                 *ngFor="let category of Object.values(categories)"
                 [value]="category.id"
+                [style.color]="category.color"
               >
                 {{ category.name }}
               </mat-option>
@@ -75,14 +80,11 @@
           </mat-form-field>
         </div>
 
-        <div *ngIf="transactionTypeControl.value === 'transfer'">
+        <div class="form__row" *ngIf="transactionTypeControl.value === 'transfer'">
           <mat-form-field class="form__control">
             <mat-label>Откуда</mat-label>
             <mat-select #accountIncome (selectionChange)="onAccountIncomeChange($event)">
-              <mat-option
-                *ngFor="let account of accounts"
-                [value]="account"
-              >
+              <mat-option *ngFor="let account of accounts" [value]="account">
                 {{ account.name }}
               </mat-option>
             </mat-select>
@@ -97,16 +99,13 @@
                 {{ currencies[accountIncome?.value.currencyId].name }}
               </span>
             </mat-label>
-            <input matInput type="number" formControlName="income">
+            <input matInput type="number" formControlName="income" />
           </mat-form-field>
 
           <mat-form-field class="form__control">
             <mat-label>Куда</mat-label>
             <mat-select #accountOutcome (selectionChange)="onAccountOutcomeChange($event)">
-              <mat-option
-                *ngFor="let account of accounts"
-                [value]="account"
-              >
+              <mat-option *ngFor="let account of accounts" [value]="account">
                 {{ account.name }}
               </mat-option>
             </mat-select>
@@ -121,17 +120,17 @@
                 {{ currencies[accountOutcome?.value.currencyId].name }}
               </span>
             </mat-label>
-            <input matInput type="number" formControlName="outcome">
+            <input matInput type="number" formControlName="outcome" />
           </mat-form-field>
         </div>
 
         <mat-form-field class="form__control form__control_date">
           <mat-label>Дата</mat-label>
-          <input matInput [matDatepicker]="datePicker" formControlName="createdAt">
+          <input matInput [matDatepicker]="datePicker" formControlName="createdAt" />
           <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
           <mat-datepicker #datePicker></mat-datepicker>
         </mat-form-field>
-  
+
         <div class="form__buttons">
           <button
             class="form__button"
@@ -140,12 +139,7 @@
           >
             Отмена
           </button>
-          <button
-            class="form__button"
-            mat-flat-button
-            color="primary"
-            type="submit"
-          >
+          <button class="form__button" mat-flat-button color="primary" type="submit">
             Добавить
           </button>
         </div>
