--- a/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.scss
+++ b/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.scss
@@ -13,3 +13,15 @@
     }
   }
 }
+
+.total-info {
+  &__value {
+    &_increase {
+      color: green;
+    }
+
+    &_decrease {
+      color: red;
+    }
+  }
+}
