--- a/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.html
+++ b/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.html
@@ -1,6 +1,6 @@
 <mat-card class="filter">
   <mat-card-title class="filter__title">
-    Мои счета
+    Счета
   </mat-card-title>
 
   <mat-card-subtitle>
