--- a/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.scss
+++ b/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.scss
@@ -11,6 +11,10 @@
   &__main {
     justify-self: center;
   }
+
+  &__category {
+    flex: 1;
+  }
 }
 
 .link {
@@ -23,4 +27,16 @@
     display: block;
     font-size: 1.2rem;
   }
+}
+
+.aside {
+  &__item + &__item {
+    margin-top: 1.6rem;
+  }
+}
+
+.categories {
+  max-height: 30rem;
+  height: 100%;
+  overflow-y: auto;
 }
