Finish adding transactions

--- a/frontend/src/app/modules/+accounts/components/statistics/statistics.component.html
+++ b/frontend/src/app/modules/+accounts/components/statistics/statistics.component.html
@@ -43,7 +43,7 @@
                       : currencies[accountsEntity[transaction.accountOutcome]?.currencyId]?.name
                       : 'symbol-narrow'
                 }}
-                ->
+                <mat-icon>arrow_right_alt</mat-icon>
                 {{
                   transaction.income
                     | currency
